# SQuADDS

./: pyproject.toml  requirements-core.txt  requirements.txt
squadds/: __init__.py
squadds/calcs/: transmon_cross.py
squadds/core/: analysis.py
