

[project]
name = "SQuADDS"
version = '0.3.7'
description = "Our project introduces an open-source database of programmatically generated and experimentally validated superconducting quantum device designs, accessible through a user-friendly interface, significantly lowering the entry barrier for research in this field."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sadman Ahmed Shanto", email = "shanto@usc.edu"},
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets==2.19.2",
    "huggingface_hub==0.21.4",
    "numba==0.60.0",
    "numpy>=1.16.6",
    "pandas==1.5.3",
    "prettytable",
    "pyaedt>=0.6.46",
    "pyEPR_quantum>=0.8.5.7",
    "python-dotenv",
    "scipy>=1.10.0",
    "scqubits>=3.3.0",
    "seaborn",
    "tabulate",
    "tqdm",
    "datashader>=0.16.0",
    "joblib>=1.3.2",
    "Requests==2.32.3",
    "PyGithub==2.4.0",
    "streamlit==1.45.0",
    "plotly",
]

[build-system]
    requires      = [ "uv_build>=0.9.17,<0.10.0" ]
    build-backend = "uv_build"

# Accounting for flat layout
[tool.uv.build-backend]
    module-name = "squadds"
    module-root = ""


[project.urls]
Homepage = "https://github.com/LFL-Lab/SQuADDS"
Repository = "https://github.com/LFL-Lab/SQuADDS"
Documentation = "https://lfl-lab.github.io/SQuADDS/"
"Bug Tracker" = "https://github.com/LFL-Lab/SQuADDS/issues"
"Research Paper" = "https://quantum-journal.org/papers/q-2024-09-09-1465/"
"Hugging Face" = "https://huggingface.co/datasets/SQuADDS/SQuADDS_DB"


[project.optional-dependencies]
optional = [
    "klayout==0.29.10",
    "gdspy>=1.6.12",
]
# Retained for backwards compatibility. To be removed in the future.
all = [
    # Core dependencies are automatically included
    "dask==2024.6.2",
    "datasets==2.19.2",
    "huggingface_hub==0.21.4",
    "memory_profiler==0.61.0",
    "numba==0.60.0",
    "numpy>=1.16.6",
    "pandas==1.5.3",
    "prettytable",
    "pyaedt>=0.6.46",
    "pyEPR_quantum>=0.8.5.7",
    "python-dotenv",
    "scipy>=1.10.0",
    "scqubits>=3.3.0",
    "seaborn",
    "tabulate",
    "tqdm",
    "datashader>=0.16.0",
    "joblib>=1.3.2",
    "Requests==2.32.3",
    "PyGithub==2.4.0",
    "streamlit==1.45.0",
    "plotly",
    "klayout==0.29.10",
    "gdspy>=1.6.12",
]
